[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/destruction/destructible.gd" type="Script" id=1]
[ext_resource path="res://resources/meshes/world/decorations/icicle/complete.tres" type="ArrayMesh" id=2]
[ext_resource path="res://resources/materials/world/decorations/icicle.material" type="Material" id=3]
[ext_resource path="res://scripts/world/shadow_setter.gd" type="Script" id=4]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( 0.119261, -0.235141, 0.00570189, -0.136655, -0.377207, -0.0511221, -0.0797755, -0.377207, -0.0937852, 0.00552975, 1.12975, 0.00570189, -0.0868887, -0.377207, 0.119479, 0.0836954, -0.355963, 0.119479, 0.0197297, -0.377355, -0.136423, 0.119261, -0.377207, -0.0653346, -0.00867016, 1.10113, -0.00851055, -0.0158098, -0.192359, -0.129316, -0.115315, -0.0501454, -0.0226972, 0.0126429, 1.06573, -0.00851055, 0.126374, -0.235141, -0.0511221, -0.0158098, 0.96615, 0.0199143, 0.0694955, -0.0432118, -0.0795728, -0.0513492, -0.0430643, -0.0937852, 0.0836954, -0.220831, 0.10524, 0.133488, -0.327491, -0.0226715, -0.0939754, -0.277628, 0.0910023, 0.0481559, -0.220831, 0.112321, 0.0126429, -0.299019, -0.136423, -0.136655, -0.348735, -0.0511221, -0.136655, -0.341801, -0.0298035, -0.00867016, -0.377207, -0.143555, -0.0868887, -0.355963, 0.119479, 0.0126429, 1.03726, 0.0128081, 0.00552975, 0.96615, -0.0226972, 0.133488, -0.370126, -0.0155653, -0.040412, 0.0785961, 0.0882331, 0.0979218, -0.348882, 0.0910023, -0.00867016, 1.11544, -0.00140433, 0.0197297, -0.348882, -0.136423, 0.133488, -0.313329, -0.0298035, -0.0939754, -0.242075, 0.0838961, -0.0939754, -0.377207, 0.10524, -0.0371229, -0.32041, -0.12221, 0.00552975, 1.11544, -0.00851055, -0.0797755, -0.142643, -0.0795728, 0.119261, -0.256384, -0.0582284, 0.0197297, 0.987541, -0.00851055, -0.136655, -0.327344, -0.0440159, -0.0158098, 1.03018, -0.00851055, -0.0868887, -0.313181, 0.112321, -0.0300097, -0.355963, -0.129316, 0.0481559, -0.22806, -0.107998, -0.115315, -0.32041, -0.0653346, 0.0694955, -0.355963, -0.100891, -0.101089, -0.370126, 0.0838961, 0.0410692, -0.377355, -0.12221, 0.0836954, -0.284857, 0.112321 )

[node name="Area" type="Area" groups=["destructible"]]
collision_layer = 4
script = ExtResource( 1 )
parts_path = "res://scenes/destruction/icicle_destroyed.tscn"
force_factor = 0.003
can_have_shadow = false

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.367459, 0 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 3 )
script = ExtResource( 4 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
shape = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.367459, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -0.134843, -0.00972366, -0.144752, 0.269686, 1.50358, 0.267043 )
max_distance = 200.0

[connection signal="body_entered" from="." to="." method="_on_Area_body_entered"]
[connection signal="camera_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_entered"]
[connection signal="camera_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_exited"]
